# enocean

./: MANIFEST.in  README.md  SUPPORTED_PROFILES.md  generate_supported_profiles.py  imp.py  pyproject.toml  setup.py
.github/: PUBLISHING.md
.github/workflows/: publish-to-pypi.yml  test.yml
enocean/: __init__.py  utils.py
enocean/communicators/: communicator.py
enocean/protocol/: EEP.xml  constants.py  eep.py  eep_metadata.py  packet.py  parser.py  ventilairsec.py  ventilairsec_eep.py
enocean/protocol/tests/: test_packet_creation.py
enocean/tests/: test_chained_packets.py  test_packet_parse_and_log.py  test_real_capture_sequence.py  test_ventilairsec_regression.py
examples/: esp3_query.py  example_D2-01-12.py
tests/: test_esp3_utils.py  test_parser_packets_clean.py
