[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "enocean-extended"
version = "1.0.0"
description = "Enhanced Python library for EnOcean protocol with dynamic EEP parsing and VentilAirSec support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pierre Leduc", email = "p.leduc@etik.com"},
    {name = "Kimmo Huoman"},
]
maintainers = [
    {name = "Pierre Leduc", email = "p.leduc@etik.com"},
]
keywords = ["enocean", "home-automation", "iot", "sensors", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "enum-compat>=0.0.2",
    "pyserial>=3.0",
    "beautifulsoup4>=4.3.2",
]

[project.urls]
Homepage = "https://github.com/pledou/enocean"
Repository = "https://github.com/pledou/enocean"
Issues = "https://github.com/pledou/enocean/issues"
Documentation = "https://github.com/pledou/enocean/blob/master/README.md"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "flake8>=3.8",
    "lxml>=4.0",
]

[tool.setuptools]
packages = ["enocean", "enocean.protocol", "enocean.communicators"]
include-package-data = true

[tool.setuptools.package-data]
"enocean.protocol" = ["*.xml"]
